fix: perfectly center pricing and labor sections with left-aligned text

--- a/src/App.css
+++ b/src/App.css
@@ -191,13 +191,14 @@ input[type=number] {
 
 .pricing-left, .labor-right {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .pricing-left > div, .labor-right > div {
   width: 100%;
-  max-width: 240px;
+  max-width: 220px;
+  text-align: left;
 }
 
 .input-dimmed {
